projet_gl/src/test/deca/context/valid/2_09/2_09_1_DeclParam.deca
// Description:
//    Programme test pour déclaration des paramètres
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    int fieldOne(int param1, float param2, boolean param3) {}
}